src/tests/Advanced/ShouldFail/let_inscin.ml
let a = 2 in
let b = 4;;
let c = 5 in
prInt (a*b*c)
